Kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: andyyelinhu/world-cup-demo:latest
          volumeMounts:
            - name: app-src
              mountPath: /app
      volumes:
        - name: app-src
          emptyDir: {}
