Kubernetes/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andy-db
  namespace: demo
spec:
  selector:
    matchLabels:
      app: andy-db
  template:
    metadata:
      labels:
        app: andy-db
    spec:
      containers:
        - name: andy-db
          image: mariadb:10.6.8-focal
          volumeMounts:
            # - name: mariadata
            #   mountPath: /var/lib/mysql
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        # - name: mariadata
        #   persistentVolumeClaim:
        #     claimName: mariadb-pvc
        - name: init-scripts
          configMap:
            name: db-init-scripts
