Kubernetes/db-deplyoment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: demo
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mariadb:10.6.8-focal
          volumeMounts:
            - name: mariadata
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadata
          persistentVolumeClaim:
            claimName: mariadata
