Kubernetes/demo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: andy-demo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: andy-argo-db1
  namespace: andy-demo
spec:
  selector:
    matchLabels:
      app: andy-argo-db1
  template:
    metadata:
      labels:
        app: andy-argo-db1
    spec:
      containers:
        - name: andy-argo-db1
          image: mariadb:10.6.8-focal
          volumeMounts:
          #   - name: mariadata
          #     mountPath: /var/lib/mysql
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        # - name: mariadata
        #   persistentVolumeClaim:
        #     claimName: mariadb-pvc
        - name: init-scripts
          configMap:
            name: db-init-scripts-1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: andy-demo
spec:
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: redis:alpine

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: andy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: andyyelinhu/nba-demo:5
---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: andy-demo
spec:
  selector:
    app: andy-argo-db1
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: andy-demo
spec:
  selector:
    app: cache
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service 
metadata:
  name: app-service
  namespace: andy-demo
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: andy-demo
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: andy.demok8sapp.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: /
#             backend:
#               service:
#                 name: app-service
#                 port:
#                   number: 5000
