Kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: demo
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: demo
spec:
  selector:
    app: cache
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service 
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
    - protocol: "HTTP"
      port: 5000
      targetPort: 5000
